--- a/.properties
+++ b/.properties
@@ -1,5 +1,6 @@
 #ports
 port.db = 16550
 port.receptionist= 15000
-server.address = localhost
+server.address = 172.26.213.141
 db.address = localhost
+host = 172.27.171.27
